--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native-stack": "^6.9.8",
+    "axios": "^1.2.4",
     "expo": "~47.0.12",
+    "expo-device": "~5.0.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "twrnc": "^3.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
